--- a/templates/login.html
+++ b/templates/login.html
@@ -126,7 +126,7 @@
 
                         <button class="btn btn-primary btn-block" type="submit"><i class="fa fa-lock"></i> SIGN IN</button>
                     </div>
-    `                {% if config.demo %}
+    <!-- `                {% if config.demo %}
                         <hr>
                         <table class="table table-striped table-advance table-hover table-bordered">
                             <h3 style="text-align: center">Test Accounts</h3>
@@ -146,7 +146,7 @@
                             </tbody>
                         </table>
                         <br>
-                    {% endif %}
+                    {% endif %} -->
                 </form>
 {#            </div>#}
 {#        </div>#}
