--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
 
     <link href="{% static 'css/profileImage.css' %}" rel="stylesheet" type="text/css"/>
     <link href="{% static 'css/sweetalert2.min.css' %}" rel="stylesheet" />
-    <script src="{% static 'js/jquery.min.1.7.js'%}"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <script src="{% static 'js/highcharts.js' %}"></script>
 </head>
 
@@ -127,7 +127,7 @@
 <!-- js placed at the end of the document so the pages load faster -->
 {% block scripts %}
 <script src="{% static 'js/jquery.js' %}"></script>
-<script src="{% static 'js/jquery-1.8.3.min.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 <script class="include" type="text/javascript" src="{% static 'js/jquery.dcjqaccordion.2.7.js' %}"></script>
 <script src="{% static 'js/jquery.scrollTo.min.js' %}"></script>
