--- a/templates/supplier/list_supplier_statement.html
+++ b/templates/supplier/list_supplier_statement.html
@@ -15,20 +15,22 @@
 <!--                    <button type="button" class="btn btn-primary print-invoice-btn mt" onclick="PrintInvoice('print-invoice')">Print Details</button><br>-->
                 </div>
             <div class="content-panel table-responsive">
-                <h2 class="text-center">{{ supplier }} | Statement List</h2><div class="input-group custom-search-form col-md-4" style="left: 5px">
-                <input type="text" class="form-control search-order" placeholder="Search...">
-                <span class="input-group-btn">
-                        <button class="btn btn-default" type="button">
+                <h2 class="text-center">بیان کی فہرست</h2>
+                <div class="input-group custom-search-form col-md-4 pull-right" style="right: 5px">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default " type="button">
                             <i class="fa fa-search"></i>
                         </button>
                     </span>
+                    <input type="text" class="form-control search-order text-right" placeholder="...تلاش کریں">
+                
             </div>
             <div class="print-invoice" id="print-invoice">
 
-            <div class="pull-right col-md-6">
-                <h4 class="text-right"><b>Total Remaining: <span style="color:red"> {{ supplier_total_remaining_amount|floatformat:'-2' }}</span></b></h4>
+            <div class="pull-left col-md-6">
+                <h4 class="text-left" ><b>کل بقیہ:<span style="color:red"> {{ supplier_total_remaining_amount|floatformat:'-2' }}</span></b></h4>
                 </div>
-                <hr>
+                <br>
                 <table class="table table-striped table-advance table-hover item-table table-bordered">
                     <thead>
                     <tr>
