product category added

--- a/templates/products/add_product.html
+++ b/templates/products/add_product.html
@@ -20,6 +20,9 @@
                         <label><strong>Brand Name</strong></label>
                         <span class="brand-name-error" style="color:red; display:none">The field is required</span>
                         <input type="text" class="form-control brand_name" name="brand_name" placeholder="Brand Name"><br>
+                        <label><strong>Category</strong></label>
+                        <span class="brand-name-error" style="color:red; display:none">The field is required</span>
+                        <input type="text" class="form-control product_category" name="product_category" placeholder="product category"><br>
                         <label><strong>Unit Type</strong></label>
                         <input type="text" class="form-control unit_type" name="unit_type" placeholder="Unit Type" list="unit-list">
                         <datalist id="unit-list">
