--- a/templates/supplier/update_supplier_statement.html
+++ b/templates/supplier/update_supplier_statement.html
@@ -6,26 +6,26 @@
     <br>
     <br><br><br>
     <div class="content-panel">
-        <h3 class="text-center"> Update Statement |{{supplier.name}}</h3>
+        <h3 class="text-center"> اپ ڈیٹ بیان |{{supplier.name}}</h3>
         <div class="panel-body">
             <form class="form-horizontal add-ledger-form" action="{% url 'supplier:update_supplier_statement' pk=object.id %}" method="post" autocomplete="off">
                 <div class="form-group">
                     <div class="col-sm-12">
                         {% csrf_token %}
                         <span class="name-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="hidden" class="form-control name" name="supplier" value="{{ object.supplier.id }}" placeholder="{{ object.supplier.id }}" readonly><br>
-                        <label><strong>Supplier Amount</strong></label>
+                        <input type="hidden" class="form-control name text-right" name="supplier" value="{{ object.supplier.id }}" placeholder="{{ object.supplier.id }}" readonly><br>
+                        <label class="pull-right"><strong>فراہم کنندہ کی رقم</strong></label>
                         <span class="father_name-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control father_name" name="supplier_amount" placeholder="{{object.supplier_amount}}" value="{{object.supplier_amount}}"><br>
-                        <label><strong>Payment Amount</strong></label>
+                        <input type="text" class="form-control father_name text-right" name="supplier_amount" placeholder="{{object.supplier_amount}}" value="{{object.supplier_amount}}"><br>
+                        <label class="pull-right"><strong>ادائیگی کی رقم</strong></label>
                         <span class="mobile-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control mobile" name="payment_amount" placeholder="{{object.payment_amount}}" value="{{object.payment_amount}}"><br>
-                        <label><strong>description no</strong></label>
-                        <input type="text" class="form-control mobile" name="description" placeholder="{{object.description}}" value="{{object.description}}"><br>
-                        <label><strong>Date</strong></label>
-                        <input type="date" class="form-control mobile" name="date" placeholder="Date"><br>
+                        <input type="text" class="form-control mobile text-right" name="payment_amount" placeholder="{{object.payment_amount}}" value="{{object.payment_amount}}"><br>
+                        <label class="pull-right"><strong>تفصیل نمبر</strong></label>
+                        <input type="text" class="form-control mobile text-right" name="description" placeholder="{{object.description}}" value="{{object.description}}"><br>
+                        <label class="pull-right"><strong>تاریخ</strong></label>
+                        <input type="date" class="form-control mobile text-right" name="date" placeholder="تاریخ"><br>
 
-                        <button type="submit" id="save" class="btn btn-primary ledger-submit-btn" style="float: right" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing Order">Save Statement</button>
+                        <button type="submit" id="save" class="btn btn-primary ledger-submit-btn" style="float: right" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing Order">بیان کو محفوظ کریں۔</button>
                     </div>
                 </div>
             </form>
