--- a/templates/expense/create_expense.html
+++ b/templates/expense/create_expense.html
@@ -4,26 +4,26 @@
 {% block content %}
     <div class="col-md-6">
         <br>
-        <a href="{% url 'expense:expense_list' %}"><button type="button" id="expense" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Expense List</button></a>
+        <a href="{% url 'expense:expense_list' %}"><button type="button" id="expense" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">اخراجات کی فہرست</button></a>
         <br><br><br>
         <div class="content-panel">
-            <h3 class="text-center">{{ request.user.retailer_user.retailer.name }} Expense</h3>
+            <h3 class="text-center">{{ request.user.retailer_user.retailer.name }} خرچہ</h3>
             <div class="panel-body">
                 <form class="form-horizontal add-ledger-form" action="{% url 'expense:add_new_expense' %}" method="post" autocomplete="off">
                     <div class="form-group">
                         <div class="col-sm-12">
                             {% csrf_token %}
-                            <label><strong>Amount</strong></label>
+                            <label class="pull-right"><strong>رقم</strong></label>
                             <span class="amount-error" style="color: red; display: none" >this field is requried</span>
-                            <input type="text" class="form-control amount" name="amount" placeholder="Amount"><br>
-                            <label><strong>Description</strong></label>
+                            <input type="text" class="form-control amount text-right" name="amount" placeholder="رقم"><br>
+                            <label class="pull-right" ><strong>تفصیل</strong></label>
                             <span class="description-error" style="color: red; display: none" >this field is requried</span>
-                            <textarea class="form-control description" name="description" placeholder="Description"></textarea><br>
-                            <label><strong>Date</strong></label>
+                            <textarea class="form-control description  text-right" name="description" placeholder="تفصیل"></textarea><br>
+                            <label class="pull-right"><strong>تاریخ</strong></label>
                             <span class="date-error" style="color: red; display: none" >this field is requried</span>
-                            <input type="text" class="form-control date" name="date" placeholder=" Date" onfocus="(this.type='date')" onblur="(this.type='text')"><br>
+                            <input type="text" class="form-control date  text-right" name="date" placeholder=" تاریخ" onfocus="(this.type='date')" onblur="(this.type='text')"><br>
                             <input type="hidden" name="retailer" value="{{ request.user.retailer_user.retailer.id }}">
-                            <button type="button" id="save" class="btn btn-primary ledger-submit-btn" style="float: right" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing Order">Save Expense</button>
+                            <button type="button" id="save" class="btn btn-primary ledger-submit-btn" style="float: right" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing Order">اخراجات محفوظ کریں۔</button>
                         </div>
                     </div>
                 </form>
