--- a/templates/expense/expense_list.html
+++ b/templates/expense/expense_list.html
@@ -6,38 +6,45 @@
     <div class="row">
         <div class="col-lg-12">
             <br>
-            <a href="{% url 'expense:add_new_expense' %}"><button type="button" id="expense" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Expense</button></a>
+            <a href="{% url 'expense:add_new_expense' %}"><button type="button" id="expense" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">اخراجات بنائیں</button></a>
             <br><br>
             <div class="content-panel table-responsive">
-                <h2 class="text-center">Orders</h2><div class="input-group custom-search-form col-md-4" style="left: 5px">
-                <input type="text" class="form-control search-order" placeholder="Search...">
+                <h2 class="text-center">خرچہ</h2><div class="input-group custom-search-form col-md-4 pull-right" style="right: 5px">
                 <span class="input-group-btn">
                         <button class="btn btn-default" type="button">
                             <i class="fa fa-search"></i>
                         </button>
                     </span>
+                    <input type="text" class="form-control search-order text-right" placeholder="تلاش کریں...">
+
             </div>
-                <hr>
+            <br>
+                <!-- <hr> -->
                 <table class="table table-striped table-bordered table-advance table-hover item-table">
                     <thead>
                     <tr>
-                        <th class="text-center"><i class="fa fa-gavel"></i> S.No</th>
-                        <th class="text-center"><i class="fa fa-gavel"></i> expense Amont</th>
-                        <th class="text-center"><i class="fa fa-bullhorn"></i> Description</th>
-                        <th class="text-center"><i class=" fa fa-edit"></i> Date</th>
-                        <th class="text-center">Actions</th>
+                        <th class="text-center">اعمال</th>
+                        <th class="text-center"><i class="fa fa-gavel"></i> تاریخ	</th>
+                        <th class="text-center"><i class="fa fa-gavel"></i> تفصیل</th>
+                        <th class="text-center"><i class="fa fa-bullhorn"></i> اخراجات کی رقم</th>
+                        <th class="text-center"><i class=" fa fa-edit"></i> سیریل نمبر	</th>
+                        
                     </tr>
                     </thead>
                     <tbody class="order-table-body text-center">
                     {% for expense in object_list %}
                     <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td>{{ expense.amount }}</td>
-                        <td>{{ expense.description }}</td>
-                        <td>{{ expense.date }}</td>
                         <td>
                             <a href="{% url 'expense:delete_expense' pk=expense.id %}"><button class="btn btn-danger btn-xs"><i class="fa  fa-trash-o"></i></button></a>
                         </td>
+                        <td>{{ expense.date }}</td>
+                        <td>{{ expense.description }}</td>
+                        <td>{{ expense.amount }}</td>
+                        <td>{{ forloop.counter }}</td>
+                        
+                        
+                        
+                        
                     </tr>
                     {% endfor %}
                     </tbody>
