--- a/templates/ledger/customer_ledger_details.html
+++ b/templates/ledger/customer_ledger_details.html
@@ -3,40 +3,58 @@
 {% block submenu_customer_ledger %}active{% endblock %}
 
 {% block content %}
+    <!-- کھاتا -->
 <br>
-<a href="{% url 'ledger:customer_ledger_list'%}"><button type="button" id="back-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Ledger List</button></a>
-<a href="{% url 'ledger:add_ledger' customer_id=customer.id %}"><button type="button" id="ledger-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Add New Ledger</button></a>
-<a href="{% url 'ledger:add_payment' customer_id=customer.id %}"><button type="button" id="payment-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Add payment</button></a>
+<a href="{% url 'ledger:customer_ledger_list'%}"><button type="button" id="back-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">لسٹ کھاتا  </button></a>
+<a href="{% url 'ledger:add_ledger' customer_id=customer.id %}"><button type="button" id="ledger-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">نیا کھاتا شامل کریں۔</button></a>
+<a href="{% url 'ledger:add_payment' customer_id=customer.id %}"><button type="button" id="payment-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">ادائیگی شامل کریں۔</button></a>
 <br><br><br>
 <div class="container-fluid">
     <div class="row">
         <div class="content-panel">
             <div class="panel-body table-responsive">
-            <h2 class="text-center">{{ customer.customer_name|title }} <small>Ledger Detail</small></h2>
+            <h2 class="text-center">{{ customer.customer_name|title }} <small>کھاتا کی تفصیل</small></h2>
             {% if ledgers %}
             <div class="col-lg-12 col-md-12 col-sm-12">
                         <div style="float: right; padding: 12px; font-size: 20px">
-                            <strong style="float: right">Total Remaining Amount: <span style="color: red">{{ remaining_amount|floatformat:-2 }}</span></strong>
+                            <strong style="float: right">کل بقیہ رقم: <span style="color: red">{{ remaining_amount|floatformat:-2 }}</span></strong>
                         </div>
-                        <hr>
+                        <!-- <hr> -->
                         <table class="table table-striped table-advance table-bordered table-hover ledger-table table-responsive">
                             <thead>
-                            <tr>
+                            <!-- <tr>
                                 <th class="text-center">Date</th>
                                 <th class="text-center">Amount</th>
                                 <th class="text-center">Payment Amount</th>
                                 <th class="text-center">Invoice</th>
                                 <th class="text-center">Description</th>
+                            </tr> -->
+                            <!-- <tr>
+                                <th class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></th>
+                                <th class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></th>
+                                <th class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"/font></font></th>
+                                <th class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></th>
+                                <th class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></th>
+                            </tr> -->
+                            <tr>
+                                <th class="text-center">تفصیل</th>
+                                <th class="text-center">رسید</th>
+                                <th class="text-center">ادائیگی کی رقم</th>
+                                <th class="text-center">رقم</th>
+                                <th class="text-center">تاریخ</th>
                             </tr>
                             </thead>
                             <tbody class="item-table-body text-center">
                             {% for ledger in ledgers %}
                             <tr>
-                                <td>{{ ledger.dated }}</td>
-                                <td>{{ ledger.amount|floatformat:-2}}</td>
-                                <td>{{ ledger.payment|floatformat:-2}}</td>
-                                <td>{{ ledger.invoice.receipt_no }}</td>
                                 <td>{{ ledger.description }}</td>
+                                <td>{{ ledger.invoice.receipt_no }}</td>
+                                <td>{{ ledger.payment|floatformat:-2}}</td>
+
+                                <td>{{ ledger.amount|floatformat:-2}}</td>
+
+                                <td>{{ ledger.dated }}</td>
+                                
                             </tr>
                             {% endfor %}
                             </tbody>
