--- a/templates/ledger/customer_ledger_list.html
+++ b/templates/ledger/customer_ledger_list.html
@@ -4,76 +4,102 @@
 
 {% block content %}
 <div class="col-md-12">
+    <!-- کھاتا -->
     <br>
-    <a href="{% url 'ledger:add_new_ledger' %}"><button type="button" id="back-customer" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Add New</button></a>
+    <a href="{% url 'ledger:add_new_ledger' %}"><button type="button" id="back-customer" class="btn btn-primary"
+            id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">نیاکھاتا شامل کریں</button></a>
     <br><br><br>
     <div class="content-panel table-responsive">
         <table class="table table-striped table-advance table-hover table-bordered purchased-table">
-            <h2 class="text-center">Customer Ledger</h2>
+            <h2 class="text-center">کھاتا</h2>
             <div class="input-group custom-search-form col-md-4" style="left: 5px">
-                <input type="text" class="form-control extra-items" placeholder="Search...">
                 <span class="input-group-btn">
-                            <button class="btn btn-default" type="button">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </span>
+                    <button class="btn btn-default" type="button">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </span>
+                <input type="text" class="form-control extra-items text-right" placeholder="تلاش کریں...">
+
             </div>
-            <div style="float: right; padding: 12px; font-size: 20px">
-                <strong>Total Remaining Amount: </strong><span style="color: red">{{ total_remaining_amount|floatformat:'-2' }}</span>
+            <div style="float: left; padding: 12px; font-size: 20px">
+                <strong>کل بقیہ رقم: </strong><span style="color: red">{{ total_remaining_amount|floatformat:'-2'}}</span>
             </div>
-            <hr>
+            <!-- <hr> -->
+            <!-- <thead>
+                <tr>
+                    <th class="text-center"><i class="fa fa-bullhorn"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"/font></font></th>
+                    <th class="text-center"><i class=" fa fa-bookmark"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"/font></font></th>
+                    <th class="text-center"><i class=" fa fa-bookmark"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"font></font></th>
+                    <th class="text-center"><i class=" fa fa-edit"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"/font></font></th>
+                    <th class="text-center"><i class=" fa fa-edit"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"/font></font></th>
+                    <th class="text-center"><i class=" fa fa-bookmark"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"/font></font></th>
+                    <th class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></th>
+                </tr>
+                </thead> -->
             <thead>
-            <tr>
-                <th class="text-center"><i class="fa fa-bullhorn"></i> Name</th>
-                <th class="text-center"><i class=" fa fa-bookmark"></i> Phone</th>
-                <th class="text-center"><i class=" fa fa-bookmark"></i> Person Type</th>
-                <th class="text-center"><i class=" fa fa-edit"></i> Total Ledger</th>
-                <th class="text-center"><i class=" fa fa-edit"></i> Total Payment</th>
-                <th class="text-center"><i class=" fa fa-bookmark"></i> Remaining Ledger</th>
-                <th class="text-center">Actions</th>
-            </tr>
+                <tr>
+                    <th class="text-center">اعمال</th>
+                    <th class="text-center"><i class=" fa fa-bookmark"></i>بقیہ کھاتا</th>
+                    <th class="text-center"><i class=" fa fa-bookmark"></i>کل ادائیگی</th>
+                    <th class="text-center"><i class=" fa fa-edit"></i>کل کھاتا</th>
+                    <th class="text-center"><i class=" fa fa-edit"></i>شخص کی قسم</th>
+                    <th class="text-center"><i class=" fa fa-bookmark"></i>فون</th>
+                    <th class="text-center"><i class="fa fa-bullhorn"></i>نام</th>
+
+                </tr>
             </thead>
             <tbody class="ledger-table-body text-center">
-            {% if customer_ledgers %}
-            {% for customer_ledger in customer_ledgers %}
-            <tr>
-                <td><a href="{% url 'ledger:customer_ledger_detail' customer_id=customer_ledger.id %}">{{ customer_ledger.customer_name}}</a></td>
-                <td>{{ customer_ledger.customer_phone }}</td>
-                <td>{{ customer_ledger.customer_type}}</td>
-                <td>{{ customer_ledger.ledger_amount|floatformat:-2 }}</td>
-                <td>{{ customer_ledger.payment_amount|floatformat:-2 }}</td>
-                <td>{{ customer_ledger.remaining_ledger|floatformat:-2 }}</td>
-                <td>
-                    <a href="{% url 'ledger:customer_ledger_detail' customer_id=customer_ledger.id %}"><button class="btn btn-success btn-xs" title="Customer Ledger Detail"><i class="fa fa-eye"></i></button></a>
-            </tr>
-            {% endfor %}
-            {% else %}
-            <tr><td colspan="6" class="text-center">No Record Found</td></tr>
-            {% endif %}
+                {% if customer_ledgers %}
+                {% for customer_ledger in customer_ledgers %}
+                <tr>
+
+                    <td>
+                        <a href="{% url 'ledger:customer_ledger_detail' customer_id=customer_ledger.id %}"><button
+                                class="btn btn-success btn-xs" title="Customer Ledger Detail"><i
+                                    class="fa fa-eye"></i></button></a>
+                    </td>
+                    <td>{{ customer_ledger.remaining_ledger|floatformat:-2 }}</td>
+
+                    <td>{{ customer_ledger.payment_amount|floatformat:-2 }}</td>
+
+                    <td>{{ customer_ledger.ledger_amount|floatformat:-2 }}</td>
+
+                    <td>{{ customer_ledger.customer_type}}</td>
+
+                    <td>{{ customer_ledger.customer_phone }}</td>
+
+                    <td><a href="{% url 'ledger:customer_ledger_detail' customer_id=customer_ledger.id %}">{{customer_ledger.customer_name}}</a></td>
+                </tr>
+                {% endfor %}
+                {% else %}
+                <tr>
+                    <td colspan="6" class="text-center">No Record Found</td>
+                </tr>
+                {% endif %}
             </tbody>
         </table>
     </div>
 </div>
 <script>
-       $(document).ready(function(){
-          $('.extra-items').on("keyup", function() {
-              var value = $(this).val().toLowerCase();
-              $(".ledger-table-body tr").filter(function() {
-                 $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-              });
-          });
-       })
+    $(document).ready(function () {
+        $('.extra-items').on("keyup", function () {
+            var value = $(this).val().toLowerCase();
+            $(".ledger-table-body tr").filter(function () {
+                $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+            });
+        });
+    })
 
-    </script>
+</script>
 <script>
 
-$('#back-customer').on('click', function() {
-    var $this = $(this);
-  $this.button('loading');
-    setTimeout(function() {
-       $this.button('reset');
-   }, 5000);
-});
+    $('#back-customer').on('click', function () {
+        var $this = $(this);
+        $this.button('loading');
+        setTimeout(function () {
+            $this.button('reset');
+        }, 5000);
+    });
 
-    </script>
+</script>
 {% endblock %}
