--- a/templates/supplier/list_supplier_statement.html
+++ b/templates/supplier/list_supplier_statement.html
@@ -6,9 +6,9 @@
     <div class="row">
         <div class="col-lg-12">
             <br>
-            <a href="{% url 'supplier:list_supplier' %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing"> Supplier List</button></a>
-            <a href="{% url 'supplier:add_supplier_statement' pk=supplier.id %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Statement</button></a>
-            <a href="{% url 'supplier:payment' pk=supplier.id %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Payment</button></a>
+            <a href="{% url 'supplier:list_supplier' %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing"> سپلائر کی فہرست</button></a>
+            <a href="{% url 'supplier:add_supplier_statement' pk=supplier.id %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">بیان بنائیں</button></a>
+            <a href="{% url 'supplier:payment' pk=supplier.id %}"><button type="button" id="statement" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">ادائیگی</button></a>
 
             <br><br>
         <div class="col-md-4">
@@ -32,31 +32,45 @@
                 </div>
                 <br>
                 <table class="table table-striped table-advance table-hover item-table table-bordered">
-                    <thead>
+                    <!-- <thead>
+                        <tr>
+                            <th class="text-center"><i class="fa fa-gavel"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"/font></font></th>
+                            <th class="text-center"><i class="fa fa-gavel"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"/font></font></th>
+                            <th class="text-center"><i class="fa fa-gavel"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"/font></font></th>
+                            <th class="text-center"><i class="fa fa-bullhorn"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"/font></font></th>
+                            <th class="text-center"><i class="fa fa-bullhorn"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"</font></font></th>
+                            <th class="text-center"><i class="fa fa-bullhorn"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></th>
+                            <th class="text-center"><i class="fa fa-bullhorn"></i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">تاریخ</font></font></th>
+                            <th class="text-center"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></th>
+                        </tr>
+                        </thead>
+                    <thead> -->
                     <tr>
-                        <th class="text-center"><i class="fa fa-gavel"></i> S.No</th>
-                        <th class="text-center"><i class="fa fa-gavel"></i> Name</th>
-                        <th class="text-center"><i class="fa fa-gavel"></i> Supplier Amount</th>
-                        <th class="text-center"><i class="fa fa-bullhorn"></i>Payment Amount</th>
-                        <th class="text-center"><i class="fa fa-bullhorn"></i>Remaining Amount</th>
-                        <th class="text-center"><i class="fa fa-bullhorn"></i>Description</th>
-                        <th class="text-center"><i class="fa fa-bullhorn"></i>Date</th>
-                        <th class="text-center">Actions</th>
+                        <th class="text-center">اعمال</th>
+                        <th class="text-center"><i class="fa fa-gavel"></i> تاریخ</th>
+                        <th class="text-center"><i class="fa fa-gavel"></i> تفصیل</th>
+                        <th class="text-center"><i class="fa fa-gavel"></i>بقایا رقم</th>
+                        <th class="text-center"><i class="fa fa-bullhorn"></i>ادائیگی کی رقم</th>
+                        <th class="text-center"><i class="fa fa-bullhorn"></i>فراہم کنندہ کی رقم</th>
+                        <th class="text-center"><i class="fa fa-bullhorn"></i>نام</th>
+                        <th class="text-center"><i class="fa fa-bullhorn"></i>سیریل نمبر</th>
+                        
                     </tr>
                     </thead>
                     <tbody class="order-table-body text-center">
                     {% for statement in object_list %}
                     <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td>{{ statement.supplier.name }}</td>
-                        <td>{{ statement.supplier_amount }}</td>
-                        <td>{{ statement.payment_amount }}</td>
-                        <td>{{ statement.remaining_amount }}</td>
-                        <td>{{ statement.description }}</td>
-                        <td>{{ statement.date }}</td>
                         <td>
                             <a href="{% url 'supplier:update_supplier_statement' pk=statement.id %}"><button class="btn btn-warning btn-xs" title="Edit"><i class="fa  fa-edit"></i></button></a>
                         </td>
+                        <td>{{ statement.date }}</td>
+                        <td>{{ statement.description }}</td>
+                        <td>{{ statement.remaining_amount }}</td>
+                        <td>{{ statement.payment_amount }}</td>
+                        <td>{{ statement.supplier_amount }}</td>
+                        <td>{{ statement.supplier.name }}</td>
+                        <td>{{ forloop.counter }}</td>
+                        
                     </tr>
                     {% endfor %}
                     </tbody>
