--- a/templates/supplier/payment.html
+++ b/templates/supplier/payment.html
@@ -6,23 +6,23 @@
     <br>
     <br>
     <div class="content-panel">
-        <h3 class="text-center"> Add Payment | {{supplier.name}}</h3>
+        <h3 class="text-center"> ادائیگی شامل کریں | {{supplier.name}}</h3>
         <div class="panel-body">
             <form class="form-horizontal add-ledger-form" action="{% url 'supplier:payment' pk=supplier.id %}" method="post" autocomplete="off">
                 <div class="form-group">
                     <div class="col-sm-12">
                         {% csrf_token %}
                         <span class="name-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="hidden" class="form-control name" name="supplier" value="{{ supplier.id }}" placeholder="{{ supplier }}" readonly><br>
-                        <label><strong>Payment Amount</strong></label>
+                        <input type="hidden" class="form-control name text-right" name="supplier" value="{{ supplier.id }}" placeholder="{{ supplier }}" readonly><br>
+                        <label class="pull-right" > <strong>ادائیگی کی رقم</strong></label>
                         <span class="mobile-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control mobile" name="payment_amount" placeholder="Payable Amount"><br>
-                        <label><strong>description no</strong></label>
-                        <input type="text" class="form-control mobile" name="description" placeholder="Description"><br>
-                        <label><strong>Date</strong></label>
-                        <input type="date" class="form-control mobile" name="date" placeholder="Date"><br>
+                        <input type="text" class="form-control mobile text-right" name="payment_amount" placeholder="Payable Amount"><br>
+                        <label class="pull-right" ><strong>تفصیل نمبر</strong></label>
+                        <input type="text" class="form-control mobile text-right" name="description" placeholder="تفصیل"><br>
+                        <label class="pull-right" ><strong>تاریخ</strong></label>
+                        <input type="date" class="form-control mobile text-right" name="date" placeholder="تاریخ"><br>
 
-                        <button type="submit" id="save" class="btn btn-primary ledger-submit-btn" style="float: right" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing Order">Save Statement</button>
+                        <button type="submit" id="save" class="btn btn-primary ledger-submit-btn" style="float: right" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing Order">بیان کو محفوظ کریں۔</button>
                     </div>
                 </div>
             </form>
