--- a/templates/employee/create.html
+++ b/templates/employee/create.html
@@ -4,30 +4,30 @@
 {% block content %}
 <div class="col-md-6">
     <br>
-    <a href="{% url 'expense:expense_list' %}"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Employee List</button></a>
+    <a href="{% url 'employee:employee_list' %}"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">ملازمین کی فہرست</button></a>
     <br><br><br>
     <div class="content-panel">
-        <h3 class="text-center">{{ request.user.retailer_user.retailer.name }} Add Employee</h3>
+        <h3 class="text-center">ملازم شامل کریں        </h3>
         <div class="panel-body">
             <form class="form-horizontal add-ledger-form" action="{% url 'employee:add_new_employee' %}" method="post" autocomplete="off">
                 <div class="form-group">
                     <div class="col-sm-12">
                         {% csrf_token %}
-                        <label><strong>Name</strong></label>
+                        <label class="pull-right"><strong>نام</strong></label>
                         <span class="name-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control name" name="name" placeholder="Name"><br>
-                        <label><strong>Father Name</strong></label>
+                        <input type="text" class="form-control name text-right" name="name" placeholder="نام"><br>
+                        <label class="pull-right"><strong>والد کا نام</strong></label>
                         <span class="father_name-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control father_name" name="father_name" placeholder="Father Name"><br>
-                        <label><strong>mobile Number</strong></label>
+                        <input type="text" class="form-control father_name text-right" name="father_name" placeholder="والد کا نام"><br>
+                        <label class="pull-right"><strong>موبائل نمبر</strong></label>
                         <span class="mobile-error" style="color: red; display: none" >this field is requried</span>
-                        <input type="text" class="form-control mobile" name="mobile" placeholder="Mobile"><br>
-                        <label><strong>Address</strong></label>
-                        <textarea class="form-control address" name="address" placeholder="Address"></textarea><br>
-                        <label><strong>Date of Joining</strong></label>
-                        <input type="text" class="form-control date" name="date_of_joining" placeholder=" Date of joining" onfocus="(this.type='date')" onblur="(this.type='text')"><br>
+                        <input type="text" class="form-control mobile text-right" name="mobile" placeholder="موبائل "><br>
+                        <label class="pull-right"><strong>پتہ</strong></label>
+                        <textarea class="form-control address text-right" name="address" placeholder="پتہ"></textarea><br>
+                        <label class="pull-right"><strong>شمولیت کی تاریخ</strong></label>
+                        <input type="text" class="form-control date  text-right" name="date_of_joining" placeholder=" شمولیت کی تاریخ" onfocus="(this.type='date')" onblur="(this.type='text')"><br>
                         <input type="hidden" name="retailer" value="{{ request.user.retailer_user.retailer.id }}">
-                        <button type="button" id="save" class="btn btn-primary ledger-submit-btn" style="float: right" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing Order">Save Employee</button>
+                        <button type="button" id="save" class="btn btn-primary ledger-submit-btn" style="float: right" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing Order">ملازم شامل کریں        </button>
                     </div>
                 </div>
             </form>
