--- a/templates/employee/employee_list.html
+++ b/templates/employee/employee_list.html
@@ -6,44 +6,57 @@
     <div class="row">
         <div class="col-lg-12">
             <br>
-            <a href="{% url 'employee:add_new_employee' %}"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Create Employee</button></a>
+            <a href="{% url 'employee:add_new_employee' %}"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">ملازم بنائیں</button></a>
             <br><br>
             <div class="content-panel table-responsive">
-                <h2 class="text-center">Employee List</h2><div class="input-group custom-search-form col-md-4" style="left: 5px">
-                <input type="text" class="form-control search-order" placeholder="Search...">
+                <h2 class="text-center">ملازمین کی فہرست                </h2><div class="input-group custom-search-form col-md-4 pull-right" style="right: 5px">
                 <span class="input-group-btn">
                         <button class="btn btn-default" type="button">
                             <i class="fa fa-search"></i>
                         </button>
                     </span>
+                    <input type="text" class="form-control search-order text-right" placeholder="تلاش کریں...">
+
             </div>
-                <hr>
+                <!-- <hr> -->
                 <table class="table table-striped table-advance table-hover item-table table-bordered">
                     <thead>
                     <tr>
-                        <th class="text-center"><i class="fa fa-gavel"></i> S.No</th>
-                        <th class="text-center"><i class="fa fa-gavel"></i> Name</th>
-                        <th class="text-center"><i class="fa fa-bullhorn"></i>Father Name</th>
-                        <th class="text-center"><i class="fa fa-bullhorn"></i>Mobile</th>
-                        <th class="text-center"><i class="fa fa-bullhorn"></i>Address</th>
-                        <th class="text-center"><i class=" fa fa-edit"></i> Date of Joining</th>
-                        <th class="text-center">Actions</th>
+                        
+                        <th class="text-center">اعمال</th>
+                        <th class="text-center"><i class=" fa fa-edit"></i> شمولیت کی تاریخ	</th>
+
+                        <th class="text-center"><i class="fa fa-bullhorn"></i>پتہ	</th>
+
+                        <th class="text-center"><i class="fa fa-bullhorn"></i>موبائل</th>
+
+                        <th class="text-center"><i class="fa fa-bullhorn"></i>والد کا نام	</th>
+
+                        <th class="text-center"><i class="fa fa-gavel"></i> نام</th>
+
+                        <th class="text-center"><i class="fa fa-gavel"></i> سیریل نمبر	</th>
                     </tr>
                     </thead>
                     <tbody class="order-table-body text-center">
                     {% for employee in object_list %}
                     <tr>
-                        <td>{{ forloop.counter }}</td>
-                        <td>{{ employee.name }}</td>
-                        <td>{{ employee.father_name }}</td>
-                        <td>{{ employee.mobile }}</td>
-                        <td>{{ employee.address }}</td>
-                        <td>{{ employee.date_of_joining }}</td>
                         <td>
                             <a href="{% url 'employee:delete_employee' pk=employee.id %}"><button class="btn btn-danger btn-xs" title="Delete"><i class="fa  fa-trash-o"></i></button></a>
                             <a href="{% url 'employee:employee_salary' pk=employee.pk %}"><button class="btn btn-primary btn-xs" title="Salary"><i class="fa  fa-money"></i></button></a>
                             <a href="{% url 'employee:employee_salary_detail' pk=employee.pk %}"><button class="btn btn-info btn-xs" title="Employee Salary Record"><i class="fa fa-bar-chart-o"></i></button></a>
                         </td>
+                        <td>{{ employee.date_of_joining }}</td>
+
+                        <td>{{ employee.address }}</td>
+
+                        <td>{{ employee.mobile }}</td>
+
+                        <td>{{ employee.father_name }}</td>
+
+                        <td>{{ employee.name }}</td>
+
+                        <td>{{ forloop.counter }}</td>
+
                     </tr>
                     {% endfor %}
                     </tbody>
