--- a/templates/employee/employee_salary_detail.html
+++ b/templates/employee/employee_salary_detail.html
@@ -3,21 +3,21 @@
 {% block content %}
 <div class="col-md-6">
     <br>
-    <a href="{% url 'employee:employee_list' %}"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Employee List</button></a>
-    <a href="{% url 'employee:employee_salary' pk=employee.pk %}"><button type="button" id="empolyee-pay" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Do Payment</button></a>
+    <a href="{% url 'employee:employee_list' %}"><button type="button" id="empolyee" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">ملازمین کی فہرست</button></a>
+    <a href="{% url 'employee:employee_salary' pk=employee.pk %}"><button type="button" id="empolyee-pay" class="btn btn-primary" id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">ادائیگی کریں۔</button></a>
     <br><br><br>
         <div class="col-lg-12 col-md-12 col-sm-12">
             <div class="panel panel-primary">
                 <div class="panel-heading text-center">
-                    <span>{{ employee.name }} Employee Salary Details</span>
+                    <span>  ملازم کی تنخواہ کی تفصیلات {{ employee.name }}</span>
                 </div>
         {% if salaries %}
                 <div class="panel-body table-responsive">
                     <table class="table table-striped table-advance table-hover ledger-table table-responsive table-bordered">
                         <thead>
                         <tr>
-                            <th class="text-center"><i class="fa fa-bullhorn"></i> Amount</th>
-                            <th class="text-center"><i class="fa fa-bookmark"></i> Date</th>
+                            <th class="text-center"><i class="fa fa-bullhorn"></i> رقم</th>
+                            <th class="text-center"><i class="fa fa-bookmark"></i> تاریخ</th>
                         </tr>
                         </thead>
                         <tbody class="item-table-body text-center">
