--- a/templates/products/product_list.html
+++ b/templates/products/product_list.html
@@ -4,13 +4,13 @@
 {% block content %}
     <div class="col-md-12">
             <br>
-            <a href="{% url 'product:add_product' retailer_id=request.user.retailer_user.retailer.id %}"><button type="button" id="add-product" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">Add Product </button></a>
+            <a href="{% url 'product:add_product' retailer_id=request.user.retailer_user.retailer.id %}"><button type="button" id="add-product" class="btn btn-primary"  id="load" data-loading-text="<i class='fa fa-circle-o-notch fa-spin'></i>Processing">مصنوعات شامل کریں</button></a>
             <br><br><br>
             <div class="content-panel table-responsive">
                 <table class="table table-striped table-bordered table-advance table-hover item-table">
-                    <h2 class="text-center">Product List</h2>
+                    <h2 class="text-center">مصنوعات کی اشیاء کی فہرست</h2>
                     <div class="input-group custom-search-form col-md-4" style="left: 5px">
-                        <input type="text" class="form-control search-product" placeholder="Search...">
+                        <input type="text" class="form-control search-product" style="text-align: right;" placeholder="تلاش کریں">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="button">
                                 <i class="fa fa-search"></i>
@@ -20,28 +20,33 @@
                     <hr>
                     <thead>
                     <tr>
-                        <th class="text-center"><i class="fa fa-bullhorn"></i> Item Name</th>
-                        <th class="text-center"><i class="fa fa-question-circle"></i> Brand Name</th>
-                        <th class="text-center"><i class=" fa fa-bookmark"></i> Unit</th>
-                        <th class="text-center"><i class=" fa fa-bookmark"></i> Available Items</th>
-                        <th class="text-center"><i class=" fa fa-edit"></i> Purchased Items</th>
-                        <th class="text-center"><i class=" fa fa-edit"></i> Bar Code</th>
-                        <th class="text-center">Actions</th>
+                        
+                        <th class="text-center"><i class="fa fa-bullhorn"></i>اعمال</th> 
+                        <th class="text-center"><i class="fa fa-question-circle"></i>بار کوڈ</th> 
+                        <th class="text-center"><i class=" fa fa-bookmark"></i>خریدی گئی اشیاء</th> 
+                        <th class="text-center"><i class=" fa fa-bookmark"></i>دستیاب اشیاء</th>
+                        <th class="text-center"><i class=" fa fa-edit"></i>یونٹ</th> 
+                        <th class="text-center"><i class=" fa fa-edit"></i>برانڈ کا نام</th>
+                        <th class="text-center">شے کا نام</th> 
                     </tr>
                     </thead>
                     <tbody class="product-table-body text-center">
                     {% for item in products %}
                         <tr>
-                            <td><a href="{% url 'product:item_details' pk=item.id %}">{{ item.name}}</a></td>
-                            <td class="#">{{ item.brand_name }}</td>
-                            <td class="#">{{ item.unit_type }}</td>
-                            <td>{{ item.product_available_items|floatformat:-2 }}</td>
-                            <td>{{ item.product_purchased_items|floatformat:-2 }}</td>
-                            <td>{{ item.bar_code}}</td>
                             <td>
                                 <a href="{% url 'product:add_product_items' product_id=item.id %}"><button class="btn btn-primary btn-xs"><i class="fa fa-plus"></i></button></a>
                                 <a href="{% url 'product:item_details' pk=item.id %}"><button class="btn btn-success btn-xs"><i class="fa fa-eye"></i></button></a>
                             </td>
+                            <td>{{ item.bar_code}}</td>
+                            <td>{{ item.product_purchased_items|floatformat:-2 }}</td>
+
+                            <td>{{ item.product_available_items|floatformat:-2 }}</td>
+
+                            <td class="#">{{ item.unit_type }}</td>
+                            <td class="#">{{ item.brand_name }}</td>
+
+                            <td><a href="{% url 'product:item_details' pk=item.id %}"><strong>{{ item.name}}</strong></a></td>
+                            
                         </tr>
                     {% endfor %}
                     </tbody>
