--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     {#    <meta name="author" content="Dashboard">#}
     {#    <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">#}
 
-    <title>Inventory System | Radi Gull Traders</title>
+    <title>انوینٹری کے نظام | ریدی گل ٹریڈرز</title>
 
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
